[package]
authors = ["Noskcaj <kcajdev@gmail.com>"]
name = "dex"
version = "0.1.0"

[dependencies]
failure = "0.1.1"
serde = "1.0.33"
serde_derive = "1.0.33"
toml = "0.4.5"
lazy_static = "1.0.0"
chrono = "0.4.2"
termion = "1.5.1"
log = "0.4.1"
pretty_env_logger = "0.2.2"
textwrap = "0.10.0"
notify-rust = "3.4.2"
signal = "0.5.0"

[dependencies.termbuf]
git = "https://github.com/Noskcaj19/termbuf.git"

[dependencies.serenity]
default-features = false
features = ["builder", "cache", "client", "gateway", "http", "model", "utils"]
git = "https://github.com/Noskcaj19/serenity.git"

[dependencies.parsing]
path = "parsing"
